@@ -37,11 +37,11 @@ public class TestDatanodeLayoutUpgrade {
     upgrade.unpackStorage(HADOOP24_DATANODE, HADOOP_DATANODE_DIR_TXT);
     Configuration conf = new Configuration(TestDFSUpgradeFromImage.upgradeConf);
     conf.set(DFSConfigKeys.DFS_DATANODE_DATA_DIR_KEY,
-        System.getProperty("test.build.data") + File.separator +
-            "dfs" + File.separator + "data");
+        new File(System.getProperty("test.build.data"),
+            "dfs" + File.separator + "data").toURI().toString());
     conf.set(DFSConfigKeys.DFS_NAMENODE_NAME_DIR_KEY,
-        System.getProperty("test.build.data") + File.separator +
-            "dfs" + File.separator + "name");
+        new File(System.getProperty("test.build.data"),
+            "dfs" + File.separator + "name").toURI().toString());
     upgrade.upgradeAndVerify(new MiniDFSCluster.Builder(conf).numDataNodes(1)
     .manageDataDfsDirs(false).manageNameDfsDirs(false), null);
   }
